--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,20 @@
 <resources>
     <string name="app_name">Weather</string>
 
+
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+
+
+    /*          DIRECTIONS           */
     <string name="n">North</string>
     <string name="e">East</string>
     <string name="s">South</string>
     <string name="w">West</string>
-
     <string name="ne">North</string>
     <string name="nw">West</string>
     <string name="se">East</string>
     <string name="sw">South</string>
-
     <string name="nne">North North-East</string>
     <string name="nnw">North North-West</string>
     <string name="ese">East South-East</string>
